# aetheris

./: .gitignore  README.md  config.py  draw_circle_overlay.py  entry.py  listener.py  requirements.txt  rl.py  test_sam copy.py  test_sam.py
electron/: index.html  main.js  package.json  preload.js  renderer.js  styles.css
src_raq/: .env.example  Dockerfile  IAM_knowledge.txt  README.md  api.py  brain.py  docker-compose.yml  ingest_to_redis.py  pipecat_bot.py  rag_context.py  redis_bridge.py  requirements.txt  rl_processors.py  testapi.py  verify_integration.sh
weave3/: .gitignore  README.md
weave3/client/: package-lock.json  package.json  processors.py  rag.py  redis_client.py
weave3/client/src/: app.js  config.js
weave3/server/: .env.example  bot.py  pyproject.toml  test_ultravox_key.py
